fixed issue with newsletter checkbox not being aligned
also fixed the center issue with portfolio

--- a/assets/scss/base/forms.scss
+++ b/assets/scss/base/forms.scss
@@ -13,7 +13,7 @@
   border: 1px solid $picton-blue;
   border-radius: 5px;
   color: $white;
-  margin-right: 22.5rem;
+  margin-right: 19.5rem;
   padding: 1rem;
   width: 8.935rem;
 }
@@ -23,13 +23,13 @@
   border-radius: 5px;
   display: inline-block;
   height: 10px;
-  margin-left: 19.6875rem;
+  margin-left: 16.375rem;
+  margin-right: 3.4375rem;
   padding: 1rem;
   width: 10px;
 }
 
 .box {
-  height: 20px;
   margin-right: 15px;
   width: 20px;
 }
