--- a/assets/scss/modules/portfolio.scss
+++ b/assets/scss/modules/portfolio.scss
@@ -12,46 +12,13 @@
   display: inline-block;
   height: 260px;
   list-style-type: none;
-  padding: 30px 10px 10px 30px;
   width: 360px;
 }
 
 .m-l {
-  margin-left: 175px;
+  margin-left: 13.75rem;
 }
 
 .hover-container {
   text-align: center;
 }
-
-//.work {
-//  margin: 0;
-//}
-//.content {
-    //background-color: $picton-blue;
-    //color: $white;
-    //cursor: pointer;
-    //display: flex;
-    //flex-direction: column;
-    //height: 100%;
-    //left: 0;
-    //opacity: 0;
-    //padding: 0 15px;
-    //position: absolute;
-    //text-align: center;
-    //top: 0;
-    //transition: opacity 500ms;
-    //width: 100%;
-
-    //.description {
-    //  flex: 1;
-  //  }
-//}
-
-//.img-list li:hover .content {
-  //opacity: 1;
-//}
-
-//.hover-container {
-  //position: relative;
-//}
